objects/Question_Response__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <inlineHelpText>Allowed Character limit : 35,000</inlineHelpText>
        <label>Answer</label>
        <length>35000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Candidate_Application__c</fullName>
        <label>Candidate Application</label>
        <referenceTo>Candidate_Application__c</referenceTo>
        <relationshipName>Question_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Question text.</description>
        <inlineHelpText>Allowed Character limit : 35,000</inlineHelpText>
        <label>Question</label>
        <length>35000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <label>Questions</label>
        <referenceTo>Questions__c</referenceTo>
        <relationshipLabel>Question Responses</relationshipLabel>
        <relationshipName>Question_Responses</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Response_Status__c</fullName>
        <inlineHelpText>Use this field to track the progress of your Response.</inlineHelpText>
        <label>Response Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <description>Responses to questions (whose text is probably, , though not necessarily, held in the Questions object).</description>
    <label>Question Response</label>
    <nameField>
        <displayFormat>QR-{000000}</displayFormat>
        <label>Question Response ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Candidate_Application__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>TQB_Question_Responses</fullName>
        <active>true</active>
        <label>TQB Question Responses</label>
    </recordTypes>
</CustomObject>